Partial_14Dec2021/force-app/main/default/objects/Beat_Plan_Account__c/Beat_Plan_Account__c.object-meta.xml
<CustomObject>
    <label>Beat Plan Account</label>
    <nameField>
        <displayFormat>BPA-{00000}</displayFormat>
        <label>Beat Plan Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Beat Plan Account</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>