Partial_14Dec2021/force-app/main/default/objects/Beat_Plan_Account__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Beat Plan Account</relationshipLabel>
    <relationshipName>Beat_Plan_Account</relationshipName>
    <type>Lookup</type>
</CustomField>