Partial_14Dec2021/force-app/main/default/objects/Beat_Plan_Account__c/fields/Beat_Plan__c.field-meta.xml
<CustomField>
    <fullName>Beat_Plan__c</fullName>
    <label>Beat Plan</label>
    <referenceTo>Beat_Plan__c</referenceTo>
    <relationshipLabel>Beat Plan Account</relationshipLabel>
    <relationshipName>Beat_Plan_Account</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>