Partial_14Dec2021/force-app/main/default/objects/Beat_Plan_Account__c/fields/Date_Plan__c.field-meta.xml
<CustomField>
    <fullName>Date_Plan__c</fullName>
    <formula>Beat_Plan__r.Beat_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Date Plan</label>
    <type>Date</type>
</CustomField>